--- a/AutoClick/Pages/Gumout.cshtml
+++ b/AutoClick/Pages/Gumout.cshtml
@@ -160,8 +160,9 @@
             </div>
         </div>
 
+        <!-- Espacio Publicitario -->
         <div class="ad-space">
-            <div class="ad-content">ESPACIO<br/>PUBLICITARIO</div>
+            @await Component.InvokeAsync("AnuncioMedioVertical")
         </div>
     </section>
 
