--- a/AutoClick/Pages/AnunciarEmpresa.cshtml
+++ b/AutoClick/Pages/AnunciarEmpresa.cshtml
@@ -973,7 +973,9 @@
     </div>
     
         <!-- Advertisement Banner -->
-        @await Component.InvokeAsync("CarruselPublicidad", new { formato = "cuadrado", seccion = "anunciar-empresa-faq" })
+        <div style="margin-top: 48px;">
+            @await Component.InvokeAsync("AnuncioHorizontal")
+        </div>
     </section>
 
     <!-- Footer -->
