--- a/AutoClick/Pages/AnunciarMiAuto.cshtml
+++ b/AutoClick/Pages/AnunciarMiAuto.cshtml
@@ -1038,10 +1038,9 @@
             </div>
         </div>
         
-        <div class="ad-placeholder">
-            <img src="~/images/autoclick-logo.png" alt="AutoClick.cr" />
-            <h3>SU ANUNCIO AQUÍ</h3>
-            <p>¡Haga click en este recuadro para empezar!</p>
+        <!-- Espacio Publicitario -->
+        <div style="margin-top: 48px;">
+            @await Component.InvokeAsync("AnuncioHorizontal")
         </div>
     </div>
 
