--- a/AutoClick/Pages/PpfCeramico.cshtml
+++ b/AutoClick/Pages/PpfCeramico.cshtml
@@ -308,7 +308,9 @@
         </div>
         
         <!-- Advertisement Banner -->
-        @await Component.InvokeAsync("CarruselPublicidad", new { formato = "cuadrado", seccion = "ppf-ceramico-footer" })
+        <div style="margin-top: 48px;">
+            @await Component.InvokeAsync("AnuncioHorizontal")
+        </div>
     </div>
 </section>
 
