--- a/AutoClick/Pages/RecienVistos.cshtml
+++ b/AutoClick/Pages/RecienVistos.cshtml
@@ -165,6 +165,11 @@
         </div>
     }
 
+    <!-- Espacio Publicitario -->
+    <div style="margin: 48px auto; max-width: 1200px; padding: 0 32px;">
+        @await Component.InvokeAsync("AnuncioHorizontal")
+    </div>
+
     <!-- Footer -->
     <partial name="_Footer" />
 </div>
