--- a/AutoClick/Pages/TerminosCondiciones.cshtml
+++ b/AutoClick/Pages/TerminosCondiciones.cshtml
@@ -77,10 +77,8 @@
         </div>
 
         <!-- Advertising Banner -->
-        <div class="ad-banner">
-            <img src="~/images/logos/autoclick-logo-hd.png" alt="AutoClick.cr" class="ad-logo" />
-            <h2 class="ad-title">SU ANUNCIO AQUÍ</h2>
-            <p class="ad-subtitle">¡Haga click en este recuadro para empezar!</p>
+        <div style="margin-top: 48px;">
+            @await Component.InvokeAsync("AnuncioHorizontal")
         </div>
     </div>
 </div>
