Logica de publicidad y campos de publicidad en vistas

--- a/AutoClick/Pages/AnunciarMiAuto.cshtml
+++ b/AutoClick/Pages/AnunciarMiAuto.cshtml
@@ -1037,14 +1037,14 @@
                 </div>
             </div>
         </div>
-        
-        <!-- Espacio Publicitario -->
-        <div style="margin-top: 48px;">
-            @await Component.InvokeAsync("AnuncioHorizontal")
-        </div>
     </div>
-
-    <!-- Footer -->
-    <partial name="_Footer" />
 </div>
+
+<!-- Espacio Publicitario -->
+<div style="margin: 48px auto; max-width: 1200px; padding: 0 32px;">
+    @await Component.InvokeAsync("CarruselPublicidad", new { formato = "horizontal", seccion = "anunciar-auto-footer" })
+</div>
+
+<!-- Footer -->
+<partial name="_Footer" />
 
