--- a/AutoClick/Pages/PpfCeramico.cshtml
+++ b/AutoClick/Pages/PpfCeramico.cshtml
@@ -309,7 +309,7 @@
         
         <!-- Advertisement Banner -->
         <div style="margin-top: 48px;">
-            @await Component.InvokeAsync("AnuncioHorizontal")
+            @await Component.InvokeAsync("CarruselPublicidad", new { formato = "horizontal", seccion = "ppf-ceramico-footer" })
         </div>
     </div>
 </section>
